# workingstack

./: .gitignore  LICENSE  README.md  gui.glade  stack.yaml  workingstack.cabal
src/: Main.hs
src/WorkingStack/: Data.hs
