name:                workingstack
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/webera/workingstack#readme
license:             BSD3
license-file:        LICENSE
author:              Antonio Weber
maintainer:          webadone@googlemail.com
copyright:           2017 Antonio Weber
category:            
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable workingstack
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-gi-base
                     , haskell-gi
                     , bytestring
                     , gi-gtk
                     , aeson
                     , text
                     , vector
